# DataWarehouse

./: .gitignore  pyproject.toml
DataWarehouse/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py  0002_alter_agerange_table_alter_user_table.py
analytics/: admin.py  filters.py  models.py  serializers.py  services.py  signals.py  sync_orders_analytics.py  urls.py  views.py
analytics/migrations/: 0001_initial.py  0002_dimdate_jalali_date.py  0003_alter_dimdate_day_of_week_alter_dimdate_is_holiday_and_more.py  0004_alter_dimdate_table_alter_dimproductbase_table_and_more.py  0005_factsales_order_id.py  0006_factsales_status.py  0007_factanalytics.py  0008_factsales_exclude_from_analytics.py  0009_factanalytics_initial_order_quantity.py  0010_dimproductbase_supplier.py
orders/: admin.py  constants.py  models.py
orders/migrations/: 0001_initial.py  0002_alter_orderitem_unit_price.py  0003_order_is_synced_analytics.py  0004_alter_orderitem_discount_percent.py  0005_alter_orderitem_table.py  0006_alter_order_status.py  0007_alter_order_status.py  0008_alter_order_created_at_alter_order_updated_at_and_more.py  0009_alter_order_created_at_alter_order_updated_at.py  0010_alter_order_created_at_alter_order_updated_at.py  0011_alter_order_created_at_alter_order_updated_at.py  0012_alter_order_created_at_alter_order_updated_at.py  0013_alter_order_created_at_alter_order_updated_at_and_more.py  0014_orderitemvariantinvoicequantity.py
products/: admin.py  models.py
suppliers/: admin.py  constants.py  models.py
(+9 files in other folders)
